Initial project setup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
-name = "TODO_CRATE_NAME"
+name = "adb-dump"
 version = "0.0.1"
 authors = ["Tamme Schichler <tamme@schichler.dev>"]
 edition = "2018"
-description = "TODO_DESCRIPTION"
+description = "A command line utility to dump as much of a phone's data as accessible via ADB. Best effort. The library exposes many utility functions for scraping adb."
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/Tamschi/TODO_CRATE_NAME"
-homepage = "https://github.com/Tamschi/TODO_CRATE_NAME/tree/v0.0.1"
-documentation = "https://docs.rs/TODO_CRATE_NAME/0.0.1"
-keywords = [TODO]
-categories = [TODO]
+repository = "https://github.com/Tamschi/adb-dump"
+homepage = "https://github.com/Tamschi/adb-dump/tree/v0.0.1"
+documentation = "https://docs.rs/adb-dump/0.0.1"
+keywords = ["andoid", "adb", "pull", "backup", "tool"]
+categories = ["hardware-support"]
 readme = "README.md"
 include = [
 	"**/*.rs",
@@ -23,9 +23,14 @@ include = [
 publish = false
 
 [badges]
-is-it-maintained-issue-resolution = { repository = "Tamschi/TODO_CRATE_NAME" }
-is-it-maintained-open-issues = { repository = "Tamschi/TODO_CRATE_NAME" }
+is-it-maintained-issue-resolution = { repository = "Tamschi/adb-dump" }
+is-it-maintained-open-issues = { repository = "Tamschi/adb-dump" }
 maintenance = { status = "experimental" }
+
+[lib]
+
+[[bin]]
+name = "adb-dump"
 
 [dev-dependencies]
 cargo-husky = "1.5.0"
