--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,4 +45,4 @@ hex = "0.4.2"
 shell-escape = "0.1.5"
 time = { version = "0.2.25" }
 unix_mode = "0.1.1"
-zip = "0.5.9"
+zip = { version = "0.5.9", default-features = false }
