--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,9 +40,8 @@ version-sync = "0.9.1"
 
 [dependencies]
 chrono = "0.4.19"
-crc32fast = { version = "1.1.1", default-features = false } # -Z minimal-versions workaround
 enumflags2 = "0.6.4"
 hex = "0.4.2"
 shell-escape = "0.1.5"
 unix_mode = "0.1.1"
-zip = { version = "0.5.9", default-features = false }
+zip = { default-features = false, git = "https://github.com/zip-rs/zip.git", branch = "fix/issue_219" }
