--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,4 +44,4 @@ enumflags2 = "0.6.4"
 hex = "0.4.2"
 shell-escape = "0.1.5"
 unix_mode = "0.1.1"
-zip = { default-features = false, git = "https://github.com/zip-rs/zip.git", branch = "fix/issue_219" }
+zip = { default-features = false, git = "https://github.com/zip-rs/zip.git", branch = "master" }
